--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.5.3
   permission_handler: ^12.0.1
   uuid: ^4.5.1
+  cryptography: ^2.7.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
