--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   network_info_plus: ^7.0.0
+  dart_mappable: ^4.6.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   riverpod_generator: ^2.6.1
   build_runner: ^2.4.13
+  dart_mappable_builder: ^4.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
