--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   uuid: ^4.5.1
   cryptography: ^2.7.0
   flutter_bloc: ^9.1.1
+  zxing2: ^0.2.4
+  image_picker: ^1.2.0
+  pretty_qr_code: ^3.5.0
 
 dev_dependencies:
   flutter_test:
