--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   network_info_plus: ^7.0.0
   dart_mappable: ^4.6.1
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
